#cargo-features = ["edition2024"]
[package]
name = "pinocchio-vault-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
hex = { version = "0.4.3", default-features = false }
#codama = { workspace = true }
pinocchio = "0.10.2"
#features = ["cpi", "copy"] }
pinocchio-associated-token-account = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-token-2022 = "0.2.0"
#pyth-solana-receiver-sdk = "1.1.0"
shank = "0.4.8"
thiserror = { version = "2.0.18", default-features = false }
#const-crypto = { workspace = true }
#solana-address = { workspace = true }

[dev-dependencies]
litesvm = "0.10.0"
#Features: hashbrown, internal-test,  nodejs-internal, precompiles, serde
litesvm-token = "0.10.0"
#solana-account = "2.2.1"
solana-instruction = "3.2.0"
solana-keypair = "3.1.2"
solana-kite = "0.2.1"
solana-pubkey = "4.1.0"
#Features: token-2022
solana-sdk = "4.0.1"
solana-signer = "3.0.0"
#Features: dev-context-only-utils, frozen-abi
#solana-transaction = "2.2.1"
#solana-system-program = "2.2.1"
#solana-program = "2.2.1"
solana-system-interface = "3.1.0"
#Features: alloc, bincode, frozen-abi, serde, std
#spl-associated-token-account = "6.0.0"
#spl-token = "7.0.0"
